Return list of leaves for employees